# python-oop-project-101

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
hexlet_code/: datatypes.py  validate.py
tests/: __init__.py  test_custom_functions.py  test_dict.py  test_list.py  test_numbers.py  test_string.py  test_validate.py
validator/: __init__.py  datatypes.py  validate.py
