[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["3FANG <d.hasimikov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wemake-python-styleguide = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
