[tool.poetry]
name = "hexlet-code"
packages = [
    { include = "validator" },
]
version = "0.1.0"
description = ""
authors = ["3FANG <d.hasimikov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
